<resources>
    <string name="app_name">Visvesmruti 2018</string>
    <string name="vslogo">vslogo</string>
    <string name="vsback">vsback</string>
    <string name="visvesmruti">Visvesmruti</string>
    <string name="year">2018</string>
    <string name="date"><![CDATA[DATE : 14TH & 15TH SEPTEMBER, 2018]]></string>
    <string name="timecount">0D 0H 0M 0S</string>
    <string name="about">About Us</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="coders">Coders</string>
    <string name="college_map">Map</string>
    <string name="google_maps_key">AIzaSyD5YyxXU_N_0QaRpOOKBK6VgN2VEqxfSII</string>
    <string name="contact_us">Contact Us</string>
    <string name="time_table">Time Table</string>
    <string name="sponsors">Sponsors</string>
    <string name="events">Events</string>
    <string name="college_name">R.N.G. Patel Institute of Technology
        (Formally Known as F.E.T.R)</string>
    <string name="address">Bardoli – Navsari Road, At: Isroli
        Tal : Bardoli – 394620 Dist: Surat</string>
    <string name="contact_number">Contact: +91 9228000867</string>
    <string name="contact_number2">02622 290933</string>
    <string name="email_fetr">Email: fetr.bardoli@gmail.com</string>
    <string name="vsinfo">"Sir Mokshagundam Visveswaraiah (15 September 1861 TO 14 April 1962) was a notable Indian engineer,scholar, statesman and the Diwan of Mysore during 1912 to 1918. He was a recipient of the Indian Republic's highest honor, the Bharat Ratna, in 1955. He was knighted as a Commander of the British Indian Empire by King George V for his myriad contributions to the public good. Every year, 15 September is celebrated as Engineer's Day in India in his memory. He is held in high regard pre-eminent engineer of India. He was the chief designer of the flood protection system for the city of Hyderabad, as well as the chief engineer responsible for the construction of the Krishna Raja Sagara dam in Mysore.

        Since last three years we celebrated Visvesmruti-2012,Visvesmruti-2013,Visvesmruti-2014 and Visvesmruti-2015in the memory of Sir Mokshagundam Visveswaraiah. Just likes the previous year; our institute has conceptualized Visvesmruti-2016 on 16th-17th September expecting promising students from various colleges. With great pleasure and enthusiasm we feel proud to proclaim our upcoming techfest Visvesmruti-2016. We have organized this technical event to cultivate innovative technical abilities among the learners. And what can be a better platform than this event for the learners to give an outlet to their zest and gusto.


        We have aimed to provide a sound platform to learners where they can realize their latent potential and sharpen their practical technological skills. This event wishes to be a forum for like minded learners where they can interact and exchange current technical knowledge. Our institute wants to mold the students into futuristic technocrats and to enable them to cop up the challenges with the qualities of confidence, sportsmanship spirit, innovative thinking, analytical abilities etc. Moreover this techfest focuses also on spontaneous expression of creativity through various programs and competitions. So, let's witness the fervor of the learners in the lively exhibition of their power- packed performances."</string>
    <string name="dev1">Kuldip Patel</string>
    <string name="dev1txt">is Developer and did Functioning</string>
    <string name="dev2">Dhiren Jummani</string>
    <string name="dev2txt">is Co-Developer and did Resource Gathering</string>
    <string name="dev3">Darshan Mistry</string>
    <string name="dev3txt">is Co-Developer and did Resource Gathering</string>
    <string name="noInternet">Please Connect To Internet!</string>
    <string name="website">Website</string>
    <string name="gallery">Gallery</string>
    <integer name="slide_animation_duration">300</integer>
</resources>
