<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/vslogo"
            app:srcCompat="@drawable/fetr" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/college_name"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/contact_number"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_number2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_fetr"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>