<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contentPage"
    android:elevation="10dp"
    android:background="@android:color/transparent"
    tools:context=".fragments.ContentFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        card_view:cardCornerRadius="9.0dip"
        card_view:cardElevation="10.0dip"
        card_view:cardUseCompatPadding="true">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/vsback"
            android:scaleType="fitXY"
            android:src="@drawable/bgmain" />

        <RelativeLayout
            android:id="@+id/list_container_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewSplash"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/vslogo"
                android:src="@drawable/vsback" />

            <TextView
                android:id="@+id/vsname"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="224dp"
                android:text="@string/visvesmruti"
                android:textAlignment="center"
                android:textColor="@color/textBig"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vsname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/year"
                android:textAlignment="center"
                android:textColor="@color/textBig"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/year"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/timecount"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>