<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menuSecond"
    android:onClick="showPage"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments.RightMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|end"
        android:orientation="vertical">

        <Button
            android:id="@+id/devButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/developers"
            android:drawablePadding="10dp"
            android:text="@string/coders"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/developers"/>

        <Button
            android:id="@+id/sponsorButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/business"
            android:drawablePadding="10dp"
            android:text="@string/sponsors"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/business"/>

        <Button
            android:id="@+id/reportButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="10dp"
            android:text="@string/report"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/mail"/>

        <Button
            android:id="@+id/shareButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/share"
            android:drawablePadding="10dp"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/share"/>

        <Button
            android:id="@+id/aboutButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/info"
            android:drawablePadding="10dp"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/info" />

    </LinearLayout>

</FrameLayout>