<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menuFirst"
    android:onClick="showPage"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments.LeftMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/eventButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/design"
            android:drawablePadding="10dp"
            android:text="@string/events"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/design" />

        <Button
            android:id="@+id/websiteButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/world"
            android:drawablePadding="10dp"
            android:text="@string/website"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/world" />

        <Button
            android:id="@+id/mapsButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="10dp"
            android:text="@string/college_map"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/location" />

        <Button
            android:id="@+id/timeButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/cal"
            android:drawablePadding="10dp"
            android:text="@string/time_table"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/cal" />

        <Button
            android:id="@+id/contactButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/contact"
            android:drawablePadding="10dp"
            android:text="@string/contact_us"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/contact" />

    </LinearLayout>

</FrameLayout>